--- a/pages/new-index/new-index.wxss
+++ b/pages/new-index/new-index.wxss
@@ -130,9 +130,12 @@ page {
 .price {
   display: flex;
   flex-direction: column;
-  text-align: right;
+  /* text-align: right; */
+  padding-left: 20rpx;
   padding-right: 20rpx;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
+  justify-content: center;
+  align-items: center;
 }
 
 .name {
@@ -172,7 +175,7 @@ padding: 0 5rpx
 
 .pri{
   display: flex;
-  justify-content: left;
+  /* justify-content: left; */
   align-items: center;
   flex-direction: row
 }
