--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -1,3 +1,5 @@
+<wxs src="./tool.wxs" module="tool" />
+
 <view class='list'>
   <view class='titile'>
     <van-tag mark type="success" size="large" color="#3963BC" bindtap='onTabTime'>{{city}}{{year}}{{mon}}份信息价</van-tag>   <van-tag size="large" color="#3963BC" class="keyword">{{keyword}}</van-tag>
@@ -14,13 +16,13 @@
 
           <view class="tr">
             <view class="td name" bindtap='enterDetail' data-name="{{item.name}}" style='color:#3683d6' data-id="{{item._id}}">{{item.name}}</view>
-            <view class="td">{{item.xinghao}}</view>
+            <view class="td xinghao">{{item.xinghao}}</view>
             <view class="td price">
-              <view wx-if="{{item.pricewithoutaxe != 0}}">￥{{item.pricewithoutaxe}} 元/{{item.unit}}
-                <van-tag color="#3683d6" plain="{{true}}">除税</van-tag>
+              <view wx-if="{{item.pricewithoutaxe != 0}}" class='pri'><view >{{tool.formate(item.pricewithoutaxe)}} 元/{{item.unit}} </view><view style='margin-left:5rpx' ><van-tag color="#3683d6" plain="{{true}}" >除税</van-tag></view>
+                
               </view>
-              <view wx-if="{{item.pricewithtaxe != 0}}">￥{{item.pricewithtaxe}} 元/{{item.unit}}
-                <van-tag color='grey' plain="{{true}}">含税</van-tag>
+              <view wx-if="{{item.pricewithtaxe != 0}}" class='pri'><view>{{tool.formate(item.pricewithtaxe)}} 元/{{item.unit}} </view><view style='margin-left:5rpx'><van-tag color='grey' plain="{{true}}" >含税</van-tag></view>
+                
               </view>
             </view>
           </view>
