--- a/pages/banner/banner2.wxml
+++ b/pages/banner/banner2.wxml
@@ -1,6 +1,6 @@
 <view class='container'>
 
-<view class='title'>造价师考试资料大发送</view>
+<view class='title'>造价师考试资料大放送</view>
   <view class='time'>查材价 2019-04-12</view>
   
   <view class='content'>为了庆祝查材价小程序新版本热烈发布,现只需联系客服,回复"大礼包",即可获得造价师视频考试资料,快快行动吧!</view>
